Added travis-ci support, README and CHANGELOG.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,11 +3,14 @@ name = "any-cache"
 version = "0.1.0"
 license = "BSD-3-Clause"
 authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
-description = "Cache with string keys and any associated value"
+description = "Cache with freely typed keys and any associated value"
 keywords = ["any", "cache"]
 
 homepage = "https://github.com/phaazon/any-cache"
 repository = "https://github.com/phaazon/any-cache"
-#documentation = "https://docs.rs/luminance"
+documentation = "https://docs.rs/any-cache"
+readme = "README.md"
+
+include = ["src/**/*", "Cargo.toml", "CHANGELOG.md", "README.md"]
 
 [dependencies]
